<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectActionActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="4in"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <Button
                android:layout_margin="7dp"
                android:id="@+id/search_button"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="loadNewActivity"
                android:text="@string/search"
                android:textSize="18dp"
                />

            <Button
                android:layout_margin="7dp"
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="loadNewActivity"
                android:text="@string/update"
                android:textSize="18dp" />
            <Button
                android:layout_margin="7dp"
                android:id="@+id/create_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:onClick="loadNewActivity"
                android:textSize="18dp"
                />
            <Button
                android:layout_margin="7dp"
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:onClick="loadNewActivity"
                android:textSize="18dp"
                />
        </LinearLayout>
        <Button
            android:id="@+id/about_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:onClick="loadNewActivity"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:textSize="18dp"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>