<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingHorizontal="20dp"
    android:background="@color/black"
    tools:context=".DeleteActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_num"
        style="@style/Text"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:background="@color/offwhite">
        <EditText
            android:id="@+id/empToDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="499984"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp" />
    </FrameLayout>


    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="confirm"
        android:text="@string/delete_button"
        android:shadowColor="@color/background_green"
        android:shadowRadius="1.5"/>
    <GridLayout
            android:id="@+id/confirmation_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:visibility="invisible">
        <TextView
            android:layout_columnSpan="2"
            style="@style/Text"
            android:text="@string/delete_confirmation" />
        <TextView
            android:layout_columnSpan="2"
            android:id="@+id/first"
            style="@style/Text"/>
        <TextView
            android:layout_columnSpan="2"
            android:id="@+id/last"
            style="@style/Text"/>
        <Button
            android:id="@+id/yesDelete"
            android:onClick="deleteData"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_width="wrap_content"
            android:layout_gravity="left"
            android:text="Yes"/>
        <Button
            android:id="@+id/noDelete"
            android:onClick="resetActivity"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:text="Cancel"/>
    </GridLayout>

    <TextView
        android:id="@+id/deleteStatus"
        style="@style/Text"
        />
</LinearLayout>